Remove Jupyter support, dead code, and unused dependencies
Jupyter was replaced by Gorilla REPL in 2023 and the Gorilla worksheets
are the examples, so the vendored clojupyter kernel source, every notebook,
the lein-jupyter plugin, the clojupyter dependency and the kernel Makefile
targets go. Also removed: the lein-template changelogs, the failing
placeholder test in clojask-script, the header-only resources/Compustat.csv,
an HTML export of one example, and the .gorilla-port runtime file (now
ignored).

Source: all commented-out code is stripped. Unused functions removed:
csv->map, csv->map-col, read-csv-row, parse-int, log-10, the tics-* atoms
and reset-daily-var, delete-dup, search-in-order, valid-line,
volatility-optimised, square, and the parameters MAXLOOKAHEAD,
MAXDISCONTINUITY, MAXRANGE and MAXMERGERANGE. direct.clj no longer defs
globals on every call. plot.clj is Oz-only. update-interest-rate and
update-transaction-cost accept 0. next-date throws a clear message at the
end of the data.

Dependencies are now Clojure 1.11.1, clojure.java-time 1.4.3 and oz.
Dropped clj-time, clj-xchart, math.numeric-tower, clj-memory-meter,
clojask-io, data.csv and core.matrix, which is replaced by mean and
sample-sd in data.clj. The java-time bump removes the abs protocol warning
on Clojure 1.11. project.clj gets a real description, URL and the MIT
license that LICENSE contains.

README rewritten around the Lein and Gorilla REPLs, the sample dataset and
the dividend switch; the Jupyter, Binder and add_kernel sections are gone.